deploy/k8s/overlays/pr/patches/lb-allocate.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-login-lb
spec:
  loadBalancerIP: ""
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-channel-lb
spec:
  loadBalancerIP: ""
